Linkek hozzá adva

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               font-size: 1.1em;
               text-shadow: 0 0 0.4em #bababa;
             ">tiktok</a>
-          <a href="" class="unselectable" style="
+          <a href="https://github.com/matecskad/Linkek/" class="unselectable" style="
               text-decoration: none;
               font-family: mono;
               font-size: 1.1em;
