--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html lang="en"><head>
-    <title>matecskad.hu</title>
+    <title>matecskad</title>
     <link rel="icon" type="image/gif" href="assets/images/asd.jpg">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="matecskad">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://matecskad.hu">
+    <meta property="og:url" content="https://matecskad.github.io/site/">
     <meta property="og:image" content="assets/images/asd.jpg">
     <meta property="og:description" content="haze">
     <meta name="theme-color" content="#FF0000">
