--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://matecskad.github.io/site/">
     <meta property="og:image" content="assets/images/asd.jpg">
-    <meta property="og:description" content="haze">
+    <meta property="og:description" content="lila csar">
     <meta name="theme-color" content="#FF0000">
     <link rel="stylesheet" href="assets/css/main.css">
     <script src="assets/js/BlockInspect.js"></script>
@@ -33,7 +33,7 @@
         }
         function videoPlay() {
           var video = document.getElementById("video");
-          (video.volume = 1), 0;
+          (video.volume = 0.02), 0;
           video.play();
         }
       </script>
